新型の基本課題に合わせた調整
