# swagger.yml
@@ -30,12 +30,12 @@ paths:
                 example:
                   - id: 1
                     imagePath: image/12345.png
-                    name: 赤ペン
+                    title: 赤ペン
                     description: 赤いペンです
                     price: 100
                   - id: 2
                     imagePath: image/54321.png
-                    name: 青ペン
+                    title: 青ペン
                     description: 青いペンです
                     price: 100
         '500':
@@ -58,7 +58,7 @@ paths:
               $ref: '#/components/schemas/Item'
             example:
               id: 3
-              name: 青ペン
+              title: 青ペン
               description: 青いペンです
               price: 100
       responses:
@@ -73,7 +73,7 @@ paths:
                 example:
                   id: 3
                   imagePath: image/22332233.png
-                  name: 青ペン
+                  title: 青ペン
                   description: 青いペンです
                   price: 100
         '400':
@@ -111,7 +111,7 @@ paths:
               example:
                 id: 1
                 imagePath: image/12345.png
-                name: 赤ペン
+                title: 赤ペン
                 description: 赤色のペンです
                 price: 100
         '404':
@@ -159,7 +159,7 @@ paths:
               example:
                 id: 1
                 imagePath: image/12345.png
-                name: 黄ペン
+                title: 黄ペン
                 description: 黄色のペンです
                 price: 100
         '400':
@@ -283,7 +283,7 @@ paths:
               example:
                 id: 2
                 imagePath: image/55555555.png
-                name: 青ペン
+                title: 青ペン
                 description: 青色のペンです
                 price: 666
         '404':
@@ -335,7 +335,7 @@ paths:
               example:
                 id: 1
                 imagePath: null
-                name: 黄ペン
+                title: 黄ペン
                 description: 黄色のペンです
                 price: 100
         '404':
@@ -380,7 +380,7 @@ paths:
               example:
                 id: 1
                 imagePath: image/123456789.png
-                name: 赤ペン
+                title: 赤ペン
                 description: 赤色のペンです
                 price: 100
         '500':
@@ -396,21 +396,29 @@ components:
       type: object
       required:
         - id
-        - name
+        - title
         - description
         - price
+        - createTime
+        - updateTime
       properties:
         id:
           type: integer
           format: int64
         imagePath:
           type: string
-        name:
+        title:
           type: string
         description:
           type: string
         price:
           type: integer
+        createTime:
+          type: string
+          format: data-time
+        updateTime:
+          type: string
+          format: date-time
     Image:
       type: object
       properties:
